<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="ST_ControlElement_HMI_1" Id="{fdf5b670-d9f7-4ae7-a9d3-772c5d56260c}">
    <Declaration><![CDATA[TYPE ST_ControlElement_HMI_1 :
STRUCT
	bZmiennaControlElement_1		: BOOL;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>